[tool.poetry]
name = "periskop-client"
version = "0.1.0"
description = "Periskop Python client"
authors = ["Marc Tuduri <marc.tuduri@soundcloud.com>"]
license = "Apache-2.0"
readme = "README.md"
classifiers=[
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Operating System :: OS Independent',
    'Topic :: Software Development'
]

[tool.poetry.dependencies]
python = "^3.6"
dataclasses-json = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-mypy = "^0.6.1"
freezegun = "^0.3.15"
requests = "^2.23.0"
pytest-black = "^0.3.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
